[package]
name = "waynova"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "A modern wayland toolkit"
readme = "README.md"
documentation = "https://docs.rs/waynova"
repository = "https://github.com/verdiwm/waynova"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
