[package]
name = "waynova"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@matilde.pet>"]
description = "A modern wayland toolkit"
readme = "README.md"
documentation = "https://docs.rs/waynova"
repository = "https://github.com/verdiwm/waynova"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
futures-core = "0.3.32"
futures-sink = "0.3.32"
waynest = "0.2.0-rc1"
waynest-client = "0.2.0-rc1"
waynest-protocols = { version = "0.2.0-rc1", features = ["client"] }
